--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "foundation-sites": "^6.2",
     "gulp": "^3.9",
     "gulp-concat": "^2.6",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3",
     "jquery": "^2.2",
     "sortablejs": "^1.4"
