Use new php repo

--- a/etc/roles/php/tasks/main.yml
+++ b/etc/roles/php/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: add php repository
-  apt_repository: repo=ppa:ondrej/php5 update_cache=yes state=present
+  apt_repository: repo=ppa:ondrej/php update_cache=yes state=present
 
 - name: install php
   with_items:
