--- a/etc/roles/php/tasks/main.yml
+++ b/etc/roles/php/tasks/main.yml
@@ -16,15 +16,7 @@
   apt_repository: repo="{{ item }}" update_cache=yes state=present
 
 - name: install php
-  with_items:
-    - php5-common
-    - php5-cli
-    - php5-fpm
-    - php5-apcu
-    - php5-intl
-    - php5-sqlite
-    - php5-mysql
-    - php5-curl
+  with_items: "{{ php_packages|union([php_fpm_package] if php_fpm|bool else []) }}"
   apt: name={{ item }} state=latest
 
 - name: conf.d
@@ -35,17 +27,17 @@
     src: php5/php.ini.j2
     dest: /etc/php5/conf.d/90-custom.ini
     mode: 0644
-  notify:
-    - restart php5-fpm
+  register: php_configured
 
 - name: configuration link
-  with_items: [cli, fpm]
+  with_items: "{{ ['cli']|union(['fpm'] if php_fpm|bool else []) }}"
   file:
     src: /etc/php5/conf.d/90-custom.ini
     dest: /etc/php5/{{ item }}/conf.d/90-custom.ini
     state: link
 
 - name: run php5-fpm as normal user
+  when: php_fpm|bool
   with_dict:
     user: "{{ user }}"
     group: www-data
@@ -58,4 +50,9 @@
     - restart php5-fpm
 
 - name: php5-fpm service state
+  when: php_fpm|bool
   service: name=php5-fpm state=started enabled=yes
+
+- name: restart php5-fpm when configured
+  when: php_fpm|bool and php_configured
+  service: name=php5-fpm state=restarted
