--- a/etc/roles/deploy/vars/main.yml
+++ b/etc/roles/deploy/vars/main.yml
@@ -3,6 +3,6 @@
 # Files to track as shared (dirs should not end with slash)
 shared:
   - app/config/parameters.yml
-  - var/logs
-  - var/sessions
-  - web/uploads
+  - var/logs/
+  - var/sessions/
+  - web/uploads/
