--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "friendsofsymfony/user-bundle": "^2.0@dev",
+        "friendsofsymfony/user-bundle": "^2.0@beta",
         "friendsofsymfony/message": "^1.0@dev",
         "knplabs/knp-paginator-bundle": "^2.5",
         "cebe/markdown": "^1.1"
