--- a/etc/roles/php/tasks/main.yml
+++ b/etc/roles/php/tasks/main.yml
@@ -1,19 +1,19 @@
 ---
 
-- name: add ondrej php repository
+- name: add repository key for debian
+  when: ansible_distribution == 'Debian'
+  apt_key: url=https://packages.sury.org/php/apt.gpg state=present
+
+- name: add repository for debian
+  when: ansible_distribution == 'Debian'
+  apt_repository:
+    repo: "deb https://packages.sury.org/php/ {{ ansible_distribution_release }} main"
+    update_cache: yes
+    state: present
+
+- name: add repository for ubuntu
   when: ansible_distribution == 'Ubuntu'
   apt_repository: repo=ppa:ondrej/php update_cache=yes state=present
-
-- name: add dotdeb repository key
-  when: ansible_distribution == 'Debian'
-  apt_key: url=https://www.dotdeb.org/dotdeb.gpg state=present
-
-- name: add dotdeb repository
-  when: ansible_distribution == 'Debian'
-  with_items:
-    - deb http://packages.dotdeb.org {{ ansible_distribution_release }} all
-    - deb-src http://packages.dotdeb.org {{ ansible_distribution_release }} all
-  apt_repository: repo="{{ item }}" update_cache=yes state=present
 
 - name: install php
   with_items: "{{ php_packages|union([php_fpm_package] if php_fpm|bool else []) }}"
