Ignore errors when conf.d is symlinked

--- a/etc/roles/php/tasks/main.yml
+++ b/etc/roles/php/tasks/main.yml
@@ -30,6 +30,7 @@
   register: php_configured
 
 - name: configuration link
+  ignore_errors: yes # when conf.d is symlinked
   with_items: "{{ ['cli']|union(['fpm'] if php_fpm|bool else []) }}"
   file:
     src: /etc/php5/conf.d/90-custom.ini
