--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "gulp": "^3.9",
     "gulp-concat": "^2.6",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3",
-    "sortablejs": "^1.4"
+    "gulp-sass": "^2.3"
   }
 }
