--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "jquery": "^2.2",
     "Sortable": "^1.4",
+    "foundation-sites": "^6.2",
     "foundation-icon-fonts": "*"
   }
 }
