--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -10,6 +10,9 @@ _argon_game_game:
 _argon_game_character:
     resource: "@ArgonGameBundle/Resources/config/routing/character.xml"
 
+_argon_game_friendlist:
+    resource: "@ArgonGameBundle/Resources/config/routing/friendlist.xml"
+
 # ADMIN
 _argon_web_admin:
     resource: "@ArgonWebBundle/Resources/config/routing/admin.xml"
