--- a/etc/roles/deploy/tasks/main.yml
+++ b/etc/roles/deploy/tasks/main.yml
@@ -72,8 +72,8 @@
       service: name=nginx state=restarted
       become: yes
 
-    - name: restart php5-fpm
-      service: name=php5-fpm state=restarted
+    - name: restart php-fpm
+      service: name=php{{ php_version }}-fpm state=restarted
       become: yes
 
 - name: cleanup releases
