--- a/etc/roles/php/defaults/main.yml
+++ b/etc/roles/php/defaults/main.yml
@@ -1,13 +1,15 @@
 ---
 
+php_version: 7.3
+
 php_packages:
-  - php5-common
-  - php5-cli
-  - php5-apcu
-  - php5-intl
-  - php5-sqlite
-  - php5-mysql
-  - php5-curl
+  - php{{ php_version }}-common
+  - php{{ php_version }}-cli
+  - php{{ php_version }}-apcu
+  - php{{ php_version }}-intl
+  - php{{ php_version }}-sqlite3
+  - php{{ php_version }}-mysql
+  - php{{ php_version }}-curl
 
 php_fpm: yes
-php_fpm_package: php5-fpm
+php_fpm_package: php{{ php_version }}-fpm
