--- a/etc/roles/php/handlers/main.yml
+++ b/etc/roles/php/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 
-- name: restart php5-fpm
-  service: name=php5-fpm state=restarted
+- name: restart php-fpm
+  service: name=php{{ php_version }}-fpm state=restarted
