Set logout_on_user_change

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,8 +24,9 @@ security:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
 
-            logout:       true
-            anonymous:    true
+            anonymous:             true
+            logout:                true
+            logout_on_user_change: true
 
             switch_user:
                 provider:  switch_user
