--- a/package.json
+++ b/package.json
@@ -6,6 +6,18 @@
     "gulp": "^3.9",
     "gulp-concat": "^2.6",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3"
+    "gulp-sass": "^2.3",
+    "@bower_components/Sortable": "RubaXa/Sortable#^1.4",
+    "@bower_components/foundation-icon-fonts": "zurb/foundation-icon-fonts#*",
+    "@bower_components/foundation-sites": "zurb/foundation-sites#^6.2",
+    "@bower_components/jquery": "jquery/jquery-dist#^3.2",
+    "@bower_components/number-polyfill": "jonstipe/number-polyfill#*",
+    "@bower_components/what-input": "ten1seven/what-input#>=4.1.0"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
+  },
+  "scripts": {
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
   }
 }
