--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "doctrine/doctrine-bundle": "^1.12",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "friendsofsymfony/user-bundle": "^2.0@beta",
+        "friendsofsymfony/user-bundle": "^2.1",
         "friendsofsymfony/message": "^1.0@dev",
         "knplabs/knp-paginator-bundle": "^2.5",
         "cebe/markdown": "^1.1"
