--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,23 @@
     },
     "require": {
         "php": ">=7.3",
-        "symfony/symfony": "^3.0",
+        "twig/twig": "^2.1",
+        "symfony/framework-bundle": "^3.4",
+        "symfony/security-bundle": "^3.4",
+        "symfony/twig-bundle": "^3.4",
         "symfony/monolog-bundle": "^3.5",
         "symfony/swiftmailer-bundle": "^3.3",
         "doctrine/orm": "^2.7",
         "doctrine/doctrine-bundle": "^1.12",
-        "doctrine/doctrine-fixtures-bundle": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.3",
         "friendsofsymfony/user-bundle": "^2.1",
         "friendsofsymfony/message": "^1.0@dev",
         "knplabs/knp-paginator-bundle": "^4.1",
         "cebe/markdown": "^1.2"
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "^3.4",
+        "symfony/web-profiler-bundle": "^3.4",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     }
 }
